--- a/Notebook/steeldata_cleaning.ipynb
+++ b/Notebook/steeldata_cleaning.ipynb
@@ -11303,7 +11303,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "bcef7bb9-9d28-4532-8edf-b1043e1e3eee",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "#off to PowerBi, github, some of my statitical software for now.  Might be returning to update files or just play some more.  "
